--- a/example_ld2450.yaml
+++ b/example_ld2450.yaml
@@ -1,6 +1,6 @@
 esphome:
-  name: hlk-presense
-  friendly_name: hlk-presense
+  name: hlk-presence
+  friendly_name: hlk-presence
 
 external_components:
   - source:
@@ -59,6 +59,9 @@ binary_sensor:
     name: Moving Target
   has_still_target:
     name: Still Target
+  presence_regions:
+    - name: "Custom Presence Region 0"
+      region_id: presence_region_0
 
 text_sensor:
   - platform: ld2450
@@ -89,8 +92,14 @@ number:
     restore_value: true
     initial_value: 0
     name: "Rotate angle"
-  presense_timeout:
-    name: "Presense timeout"
+  presence_timeout:
+    name: "Presence timeout"
+  presence_regions:
+    - x0: 100
+      y0: 100
+      x1: 200
+      y1: 200
+      id: presence_region_0
   entry_points:
     - x: 0
       y: 0
