--- a/example_ld2450.yaml
+++ b/example_ld2450.yaml
@@ -48,7 +48,7 @@ uart:
 ld2450:
   uart_id: uart_bus
   update_interval: 1s
-  invert_y: true
+  invert_y: false
   invert_x: false
 
 binary_sensor:
